# SmallTestsQml

./: CMakeLists.txt  ReadMe  ReadMe.md  main.qml
src/: CMakeLists.txt
src/qml/: ButtonCaptureImage.qml  ButtonCaptureImageForm.ui.qml  ComponentCamera.qml  ComponentTest.qml  Graph.qml  HelloQml.qml  TestSwipeView.qml  View.qml  main.qml  qml.qrc
src/src/: DiagramDataProvider.cpp  DiagramDataProvider.h  TableItem.cpp  TableItem.h  TableModel.cpp  TableModel.h  main.cpp
src/testData/: sampleTable.txt
